[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "langcommunity"
version = "1.2.0"
description = "langcommunity"
authors = ["Yannick Stephan <stephan.yannick@me.com>"]
readme = "README.md"
packages = [{include = "langcommunity"}]

###################################
# Ruff & MyPy
###################################

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

exclude = [ "notebooks", "examples", "example_data",]

[tool.ruff]
target-version = "py39"
line-length = 140

[tool.ruff.lint]
select = [ "E", "F", "I", "T201",]

################################################################################
# Required Dependencies
################################################################################


[tool.poetry.dependencies]
# Python
python = ">=3.10,<4.0"
langfoundation = "*"

# Log
rich = "^13.7.1"

# Enum
strenum = "^0.4.15"

################################################################################
# Optional
################################################################################

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-openai = "^0.2.1"
langchain-groq = "^0.2.0"
langchain-mistralai = "^0.2.0"
langchain-ollama = "^0.2.0"
langchain-together = "^0.2.0"
langchain-google-vertexai = "^2.0.1"
pymongo = "^4.7.2"
motor = "^3.4.0"
cohere = "^5.8.1"


###################################
# Optional Dependencies
###################################

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
types-chardet = "^5.0.4.6"

################################################################################
# Test
################################################################################

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"


[tool.pytest.ini_options]
python_files = "test_*" # all python files that starts with test_
python_classes = "Test*" # all python classes that starts with Test
python_functions = "test_*" # all python functions that starts with test_
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
